bpk-lib/crates/macbat/macros/tests/trybuild_negative/subscription_duplicate_error.stderr
error: `error` may appear at most once
 --> tests/trybuild_negative/subscription_duplicate_error.rs:3:34
  |
3 | #[batpak(input = JsonValueInput, error = StoreError)]
  |                                  ^^^^^
